# wavlm-diarization

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  environment.yaml  miniconda.sh  pyproject.toml  pyproject.toml.save  reqs-no-nemo.txt  requirements.txt  vad_sweep.py  validate_diarization.py  validate_diarization.py.save  validate_diarization.py.save.1  validate_diarization.py.save.2
.docs/documentation/: CONTRIBUTING.md  RESOURCES.md
.docs/img/architecture/: WavLMMSDDArchitecture.drawio
.github/workflows/: ci.yml  pypi.yaml
notebook/: benchmark.ipynb
src/wavlmmsdd/: __init__.py  main.py
src/wavlmmsdd/audio/config/: config.yaml  schema.py
src/wavlmmsdd/audio/diarization/: diarize.py
src/wavlmmsdd/audio/feature/: embedding.py
src/wavlmmsdd/audio/preprocess/: convert.py  resample.py
src/wavlmmsdd/audio/utils/: utils.py
src/wavlmmsdd/tools/: __init__.py  vad_sweep.py
src/wavlmmsdd/utils/: logger.py
tests/: test_smoke.py
